vlib/v/checker/tests/reference_field_must_be_initialized.out
vlib/v/checker/tests/reference_field_must_be_initialized.vv:9:7: error: reference field `Node.next` must be initialized
    7 | 
    8 | fn main() {
    9 |     n := Node{
      |          ~~~~~
   10 |         data: 123
   11 |     }
