vlib/v/checker/tests/reference_field_must_be_initialized.vv
module main

struct Node {
	data int
	next &Node
}

fn main() {
	n := Node{
		data: 123
	}
	eprintln('n.data: ${n.data}')
}
